assets/css/style.css
/* ... */
.vi-player .vjs-track-settings-controls button {
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border: 0;
  padding: 8px 15px;
  text-decoration: none;
  background: var(--vi-player-color-white);
  box-shadow: 0 0 0 1px var(--vi-player-color-white);
  color: rgba(0, 0, 0, 0.8);
  min-width: 80px;
  height: auto;
  font-size: 14px;
  border-radius: var(--vi-player-border-radius);
  font-weight: bolder;
  word-break: break-word;
  text-transform: none;
}

.vi-player .vjs-track-settings-controls button:hover {
  box-shadow: 0 0 0 2px var(--vi-player-color-white);
  color: rgba(0, 0, 0, 0.8);
}

.vi-player button.vjs-done-button {
  background: var(--vi-player-color-primary);
  box-shadow: 0 0 0 1px var(--vi-player-color-primary);
  color: var(--vi-player-color-white);
}

.vi-player button.vjs-done-button:hover {
  background: var(--vi-player-color-primary);
  box-shadow: 0 0 0 2px var(--vi-player-color-primary);
  color: var(--vi-player-color-white);
}

/* Errors */
.vi-player.vjs-error .vjs-error-display .vjs-modal-dialog-content {
  text-align: center;
  font-size: 15px;
  margin: 0 auto;
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.vi-player.vjs-error .vjs-error-display .vjs-modal-dialog-content::before {
  display: flex;
  content: '';
  background: url('../icons/alert.svg') center center / 100% no-repeat;
  width: 42px;
  height: 42px;
  position: static;
  margin: -20px auto 20px;
}

.vi-player.vjs-error .vjs-error-display:before {
  display: none;
}

/* Icons */
.vi-player .vjs-icon-placeholder::before {
  display: flex;
  align-items: center;
  justify-content: center;
}

.vi-player .vjs-svg-icon {
  width: var(--vi-player-control-icon-size);
  height: var(--vi-player-control-icon-size);
  color: var(--vi-player-color-controls);
  fill: var(--vi-player-color-controls);
  stroke: var(--vi-player-color-controls);
}

/* Chapters / Timeline
==================================== */
.vi-player .vjs-chapter-timeline {
  position: absolute;
  bottom: -2px;
  height: calc(100% + 4px);
  background-color: transparent;
  pointer-events: none;
  transition: height 0.2s ease;
}

.vi-player .vjs-chapter-timeline::before {
  content: '';
  position: absolute;
  bottom: 2px;
  right: 0;
  height: calc(100% - 4px);
  width: 4px;
  background: rgba(255, 255, 255, 0.35);
}

.vi-player .vjs-chapter-timeline.vjs-chapter-timeline-current {
  background-color: var(--vi-player-color-white);
}

.vi-player .vjs-chapter-timeline-progress {
  position: absolute;
  width: 0;
  height: 100%;
  background: var(--vi-player-color-primary);
  z-index: 1;
  opacity: 0;
}

.vi-player
  .vjs-chapter-timeline.vjs-chapter-timeline-current
  .vjs-chapter-timeline-progress {
  opacity: 1;
}

.vi-player .vjs-time-tooltip-chapter-title {
  display: block;
  white-space: nowrap;
  margin-bottom: 4px;
}

.vi-player .vjs-time-tooltip-with-chapter-title {
  margin-top: -20px;
}

/* Branding
==================================== */
.vi-player .vjs-poster {
  z-index: -1;
}

.vi-player .vjs-poster img {
  height: 100%;
}

.vi-player .vjs-branding {
  position: absolute;
  opacity: 0;
  transition: opacity 0.25s ease 0s;
  width: 36%;
}

.vi-player .vjs-branding img {
  max-width: 100%;
  height: auto;
}

.vi-player:not(.vjs-hover-preview-running):hover .vjs-branding,
.vi-player.vjs-paused:not(.vjs-hover-preview-running) .vjs-branding {
  opacity: 1;
}

.vi-player .vjs-branding-top-left {
  top: 15px;
  left: 15px;
}

.vi-player .vjs-branding-top-right {
  top: 15px;
  right: 15px;
  text-align: right;
}

.vi-player .vjs-branding-bottom-left {
  bottom: calc(var(--vi-player-control-bar-height) + 15px);
  left: 15px;
}

.vi-player .vjs-branding-bottom-right {
  bottom: calc(var(--vi-player-control-bar-height) + 15px);
  right: 15px;
  text-align: right;
}

.vi-player.vjs-controls-disabled .vjs-branding-bottom-left,
.vi-player.vjs-controls-disabled .vjs-branding-bottom-right {
  bottom: 15px;
}

/* Playlist
==================================== */
.vi-playlist {
  display: flex;
  flex-direction: column;
  grid-gap: 5px;
}

.vi-playlist-main {
  flex: none;
}

.vi-playlist-nav {
  flex: none;
  overflow-x: auto;
  overflow-y: hidden;
  scroll-behavior: smooth;
  scrollbar-width: thin;
  scrollbar-color: rgba(0, 0, 0, 0.5) transparent;
  padding-bottom: 2px;
}

.vi-playlist-nav::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

.vi-playlist-nav::-webkit-scrollbar-track {
  background-color: rgba(0, 0, 0, 0.1);
}

.vi-playlist-nav::-webkit-scrollbar-thumb {
  background-color: #c1c1c1;
  border-radius: 10px;
}

.vi-playlist .vjs-playlist-item-list {
  padding: 0;
  margin: 0;
  list-style: none;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  grid-gap: 5px;
}

.vi-playlist .vjs-playlist-item {
  padding: 0;
  margin: 0;
  position: relative;
  cursor: pointer;
  background-color: var(--vi-player-color-black);
  overflow: hidden;
  flex: none;
  width: 28%;
}

.vi-playlist .vjs-playlist-item::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.5);
  transition: background-color 0.2s ease;
  z-index: 1;
}

.vi-playlist .vjs-playlist-item:hover::before {
  background: rgba(0, 0, 0, 0.25);
}

.vi-playlist .vjs-playlist-item.vjs-selected::before {
  background: rgba(0, 0, 0, 0);
}

.vi-playlist .vjs-playlist-item .vjs-playlist-thumbnail {
  position: relative;
  display: flex;
  align-items: stretch;
  flex-direction: column;
}

.vi-playlist .vjs-playlist-item .vjs-playlist-thumbnail::after {
  content: '';
  width: 0;
  height: 0;
  padding-bottom: 56.25%;
}

.vi-playlist .vjs-playlist-item .vjs-playlist-thumbnail::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 40px;
  background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
  z-index: 1;
  bottom: 0;
  left: 0;
}
/* ... */

